methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: not found: value mur
      mur=true
      ^SlugTracking:10: error: not found: value mur
  return mur
         ^