methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var piste : Boolean= false
  if(!isFacingWall()){
    forward()
    if(getGroundColor()==Color.green)
      mur=true
  }
  
  return mur
}